--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "chart.js": "^4.4.3",
     "react": "^18.3.1",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.1",
     "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-resizable": "^1.10.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
