WIP: fetch sheds with view table

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_DOMAIN='https://foreign.lmis.gov.et/'
 REACT_APP_GATEWAY_URL="https://staging-gateway.lmis.gov.et/v1/graphql"
+REACT_APP_BACKEND_URL="http://45.79.248.241:7979/v1/graphql"
