--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.11.1",
+    "@apollo/client": "^3.12.3",
     "@headlessui/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-table": "^8.20.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "graphql": "^16.10.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.3.1",
@@ -18,10 +21,12 @@
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.1.4",
+    "react-resizable": "^1.10.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
-    "react-resizable": "^1.10.1",
+    "react-spinners": "^0.15.0",
+    "tailwind-merge": "^2.5.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
